2006-08-10  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (TESTS): Revert 2006-08-08 change.  Test must pass.

2006-08-08  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am: Move frysk2130/strace-clone-exec.sh to XFAIL_TESTS.

2006-08-02  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am: Do not list XFAIL_TESTS twice when declaring
	that all TESTS depend on Makefile.

2006-06-15  Nurdin Premji  <npremji@redhat.com>

	* frysk2595/ptrace_after_exec.c: Added #include <linux.syscall.h>
	and <sys/syscall>.
	* frysk2595/ptrace_after_exec_of_thread.c: Ditto.
	* frysk2595/ptrace_after_forked_thread_exits.c: Ditto.
	* frysk2595/ptrace_before_forked_thread_exits.c: Ditto.
	* frysk2595/ptrace_peek_wrong_thread.c: Ditto.
	* process/multi_child_exec.c: Ditto.
	* process/multi_child_parent_exec.c: Ditto.
	* process/multi_parent_exec.c: Ditto.
	* process/single_exec.c: Ditto.
	* Makefile.am (AM_CFLAGS): Add -I$(top_srcdir)/include.

2006-06-15  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (frysk2760_FILES): Add frysk2760/linux.ptrace.h

2006-06-15  Mike Cvet  <mcvet@redhat.com>

	* frysk2760/TestBarrier.java: Added
	* frysk2760/TestBarrier.cxx: Added
	* frysk2760/linux.ptrace.h: Added as a dependency for the .cxx.
	* Makefile.am: Updated to include the above files for XFAIL_TESTS.

2006-06-13  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (noinst_PROGRAMS): Do not list frysk2137/Gcov.sh.

2006-06-10  Andrew Cagney  <cagney@redhat.com>

	* frysk2670/Action.java: Move ...
	* frysk2670/one/Action.java: ... to here.
	* frysk2670/AddTaskObserverAction.java: Move ...
	* frysk2670/one/AddTaskObserverAction.java: .. to here.
	* frysk2670/ExitNotificationObserver.java: Move ...
	* frysk2670/one/ExitNotificationObserver.java: ... to here.
	* frysk2670/TaskAction.java: Move ...
	* frysk2670/one/TaskAction.java: ... to here.
	* Makefile.am: Update.
	(XFAIL_TESTS): Add frysk2670/gcj.sh.

	* Makefile.am (frysk2670/gcj.sh): Do not pass frysk.jar to GCJ.
	Add $(srcdir) to include path.